tests/errors/semantic/E011_mod_b.zy
# E011_mod_b {
    #> { fn_b }
    fn_b() { <~ "b" }
}
